# drone-tello1.2

./: README.md  Status.cpp  Status.hpp
Docs/: Requirements Definition.pages
src/: CMakeLists.txt  CommunicationCenter.cpp  CommunicationCenter.hpp  DroneState.cpp  DroneState.hpp  Status.cpp  Status.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp  simulator.cpp  tester.cpp
src/GoodCommands/: Back.cpp  Back.hpp  Ccw.cpp  Ccw.hpp  Command.cpp  Command.hpp  Cw.cpp  Cw.hpp  Down.cpp  Down.hpp  Emergency.cpp  Emergency.hpp  Flip.cpp  Flip.hpp  Forward.cpp  Forward.hpp  Go.cpp  Go.hpp  Land.cpp  Land.hpp  Left.cpp  Left.hpp  Right.cpp  Right.hpp  Stop.cpp  Stop.hpp  Streamoff.cpp  Streamoff.hpp  Streamon.cpp  Streamon.hpp  Takeoff.cpp  Takeoff.hpp  Up.cpp  Up.hpp
src/Message/: CommandList.cpp  CommandList.hpp  Message.cpp  Message.hpp  MessageCenter.cpp  MessageCenter.hpp
src/Mission/: Mission.cpp  Mission.hpp  Mission1.cpp  Mission1.hpp  Mission2.cpp  Mission2.hpp  Mission3.cpp  Mission3.hpp  MissionCollection.cpp  MissionCollection.hpp
src/tests/: test_DroneState.cpp  test_Message.cpp  test_MissionCollection.cpp  test_Status.cpp
uml/: drone-UML.vpp  drone-UML.vpp.bak_000f  drone-UML.vpp.bak_001d  drone-UML.vpp.bak_002d  drone-UML.vpp.bak_003d  drone-UML.vpp.bak_004d  drone-UML.vpp.bak_005d  drone-UML.vux
